# vehicledetection

./: CMakeLists.txt  README.md  coding_guideline_lint.py  ducommand_hs.txt
cmake/: dependencies.cmake
config/: augment.json  config.json  plot.json
include/: cross_validation.h  data_augmentation.h  dataset.h  dataset_BDD100K.h  dataset_KITTI.h  performance_eval.h  util.h  vehicle.h  vehicle_detector.h
include/param/: augment_param.h  crossval_param.h  eval_plot_param.h  param.h
model/: default_config.json
model/VGG16/: VGG16_faster_rcnn_solver.pt  VGG16_faster_rcnn_test.pt  VGG16_faster_rcnn_train.pt
scripts/: augment.sh  calc_avgbox_kitti.py  calc_avgbox_kitti.sh  calc_iou.py  calc_mean.py  calc_mean.sh  config_crossval.json  convert_labels.sh  convert_model.py  convert_model.sh  cross_val.sh  eval_augmentation.sh  evaluate.sh  make_label.py  merge_labels.py  merge_labels.sh  mon_loss.py  plot_loss.py  plot_result.py  plot_result.sh  test_single_image.sh  train.sh
src/: cross_validation.cpp  data_augmentation.cpp  dataset.cpp  dataset_BDD100K.cpp  dataset_KITTI.cpp  performance_eval.cpp  vehicle_detector.cpp
src/param/: augment_param.cpp  crossval_param.cpp  eval_plot_param.cpp  param.cpp
test/: CMakeLists.txt  augment_KITTI.json  cross_validation_test.cpp  dataset_test.cpp  main.cpp  performance_eval_test.cpp  vehicle_detector_test.cpp  vehicle_test.cpp
test/sample_model/: ZF_faster_rcnn_solver_test.pt  ZF_faster_rcnn_train.pt  default_config.json  voc2007_test.trainval
tools/: CMakeLists.txt  augmentor.cpp  convert_to_voc.cpp  cross_val.cpp  evaluate.cpp  test_single_image.cpp  train_model.cpp
